--- a/Vanilla-JavaScript-Stopwatch/index.html
+++ b/Vanilla-JavaScript-Stopwatch/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Stopwatch</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <div class="container">
+      <h1>Stopwatch</h1>
+      <p class="time">
+        <span id="minutes">00</span>: <span id="seconds">00</span>: <span id="milliseconds">00</span>
+      </p>
+      <button id="start">Start</button>
+      <button id="stop">Stop</button>
+      <button id="reset">Reset</button>
+    </div>
   </body>
 </html>
