--- a/Vanilla-JavaScript-Stopwatch/index.html
+++ b/Vanilla-JavaScript-Stopwatch/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Stopwatch</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div class="container">
       <h1>Stopwatch</h1>
       <p class="time">
-        <span id="minutes">00</span>: <span id="seconds">00</span>: <span id="milliseconds">00</span>
+        <span id="hours">00</span>: <span id="minutes">00</span>: <span id="seconds">00</span>: <span id="milliseconds">00</span>
       </p>
-      <button id="start">Start</button>
-      <button id="stop">Stop</button>
-      <button id="reset">Reset</button>
+      <button class="start" id="start">Start</button>
+      <button class="stop" id="stop">Stop</button>
+      <button class="reset" id="reset">Reset</button>
     </div>
   </body>
 </html>
