feat: changed background image

--- a/Vanilla-JavaScript-Stopwatch/index.html
+++ b/Vanilla-JavaScript-Stopwatch/index.html
@@ -10,14 +10,16 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div class="container">
-      <h1>Stopwatch</h1>
-      <p class="time">
-        <span id="hours">00</span>: <span id="minutes">00</span>: <span id="seconds">00</span>: <span id="milliseconds">00</span>
-      </p>
-      <button class="start" id="start">Start</button>
-      <button class="stop" id="stop">Stop</button>
-      <button class="reset" id="reset">Reset</button>
+    <div>
+      <div class="container">
+        <h1>Stopwatch</h1>
+        <p class="time">
+          <span id="hours">00</span>: <span id="minutes">00</span>: <span id="seconds">00</span>: <span id="milliseconds">00</span>
+        </p>
+        <button class="start" id="start">Start</button>
+        <button class="stop" id="stop">Stop</button>
+        <button class="reset" id="reset">Reset</button>
+      </div>
     </div>
   </body>
 </html>
